--- a/src/ListenTogether.Pages/Components/Discover/Discover.razor.css
+++ b/src/ListenTogether.Pages/Components/Discover/Discover.razor.css
@@ -1,10 +1,20 @@
 @media screen and (min-width: 960px) {
- 
+
+    .song-menu-container {
+        width: 700px;
+        margin: auto;
+    }
+
     .song-menu-item {
         cursor: pointer;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .song-menu-name {
+        margin-top: 3px;
+        font-size: 13px;
     }
 }
 
