--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor.css
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor.css
@@ -168,3 +168,23 @@
     filter: blur(90px);
     box-shadow: 0 -10px 20px #403f3f;
 }
+
+.music-image-avatar {
+    width: 200px;
+    height: 200px;
+    animation: spin 60s linear infinite;
+}
+
+.animation-paused {
+    animation-play-state: paused;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
