--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -105,8 +105,7 @@
                 default:
                     break;
             }
-
-            StateHasChanged();
+            await InvokeAsync(StateHasChanged);
         }
     }
 }
