--- a/src/ListenTogether.Pages/Components/SearchLabel.razor.css
+++ b/src/ListenTogether.Pages/Components/SearchLabel.razor.css
@@ -1,7 +1,8 @@
-.main {
-    height: 30px;
-    padding: 0 15px 0 15px;
-    border-radius: 20px;
-    border-block-color: white;
-    cursor: text;
+.hot-word {
+    transform: translateY(-25px);
+    transition: transform 1s linear;
+}
+
+.leave {
+    transform: translateY(0);
 }
