--- a/src/ListenTogether.Pages/Pages/SettingsPage.razor
+++ b/src/ListenTogether.Pages/Pages/SettingsPage.razor
@@ -7,6 +7,8 @@
 @inject IUserService UserService
 @inject IEnvironmentConfigService ConfigService
 @inject NavigationManager NavigationManager
+@inject IAppVersion AppVersion
+@inject IAutoUpgrade AutoUpgrade
 
 <div class="page">
 
@@ -18,15 +20,15 @@
     }
     else
     {
-        <MudContainer Class="d-flex">
+        <div class="d-flex">
             <MudAvatar>
-                <MudImage Src="@($"http://music.jiuling.cc{LoginDataStorage.GetAvatar()}")"></MudImage>
+                <MudImage Src="@($"https://music.jiuling.cc{LoginDataStorage.GetAvatar()}")"></MudImage>
             </MudAvatar>
             <MudContainer>
                 <MudText>@LoginDataStorage.GetNickname()</MudText>
                 <MudText>用户名：@LoginDataStorage.GetUsername()</MudText>
             </MudContainer>
-        </MudContainer>
+        </div>
     }
 
     <div>
@@ -127,6 +129,20 @@
                Style="width:100%"
                OnClick="@(async () => await LogoutAsync())">退出账号</MudButton>
     }
+
+    <div class="d-flex flex-column align-center mt-5">
+        <div class="app-title">一起听</div>
+        <div class="mt-3 app-text">@($"版本: {AppVersion.GetCurrentVersionString()}")</div>
+        <div class="mt-1 app-link" @onclick="CheckUpdateAsync">检查更新</div>
+        <div class="mt-1 app-text">本软件基于GPL-3.0协议，开源、免费</div>
+        <div class="mt-1 app-text">作者：九零</div>
+        <div class="mt-1 app-link">
+            <a href="https://github.com/JiuLing-zhang/ListenTogether"
+               target="blank">
+                Github
+            </a>
+        </div>
+    </div>
 </div>
 @code {
     protected override void OnInitialized()
@@ -246,5 +262,10 @@
         }
         await UserService.LogoutAsync();
         LoginDataStorage.Clear();
+    }
+
+    private async Task CheckUpdateAsync()
+    {
+        await AutoUpgrade.DoAsync(false);
     }
 }
