--- a/src/ListenTogether.Pages/Shared/MainLayout.razor.css
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 960px) {
     .page {
         display: grid;
-        grid-template-rows: 1fr auto auto;
+        grid-template-rows: 1fr 45px 55px;
         grid-template-columns: 1fr;
         grid-template-areas:
             "main"
